--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">KIP Translator</string>
+    <string name="translated_text_hint">Перевести текст</string>
+    <string name="downloaded_models_label">Downloaded models: %1$s</string>
+    <string name="unknown_error">Unknown error occurred.</string>
+    <string name="translate_progress">Translating&#8230;</string>
+
 </resources>
